--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Компания ЮристⓀ существует уже более трех лет и на
+    сегодняшний день имеет более сотни довольных клиентов. Наша компания основана двумя
+    высококвалифицированными специалистами, которые имеют более чем 15-летний опыт работы в
+    сфере юриспруденции. Мы предоставляем широкий спектр юридических услуг, включая корпоративное право, налоговое
+    право, трудовое право, гражданское право, семейное право, интеллектуальную собственность,
+    арбитраж, недвижимость и международное право. Мы готовы предоставить комплексные решения для
+    любых юридических вопросов. Наша команда юристов гарантирует профессиональный подход к
+    каждому клиенту, а также строгое соблюдение этических принципов и стандартов в работе. Мы
+    готовы дать нашим клиентам квалифицированную помощь в любых юридических вопросах, включая
+    консультации, составление документов, представление интересов в суде и арбитраже, а также
+    другие виды юридических услуг. В нашей работе мы используем индивидуальный подход к каждому
+    клиенту и стремимся разработать оптимальную стратегию, которая удовлетворит все потребности
+    наших клиентов. Мы готовы работать с физическими и юридическими лицами, независимо от
+    сложности вопроса. Мы уделяем особое внимание общению с нашими клиентами и гарантируем полную
+    конфиденциальность и защиту данных. Мы ценим доверие, которое наши клиенты оказывают нам, и
+    всегда готовы предоставить лучшее качество услуг. Если вы ищете надежного партнера в области
+    юридических услуг, обращайтесь к нам. Мы готовы предоставить вам высококачественную и
+    профессиональную помощь в любых юридических вопросах. Свяжитесь с нами сегодня, чтобы
+    получить консультацию и начать работу с нашей компанией."
+    />
     <title>ЮристК</title>
   </head>
   <body>
